--- a/docs_site/content/dbux-features/25-pdg.mdx
+++ b/docs_site/content/dbux-features/25-pdg.mdx
@@ -11,6 +11,12 @@ import Img from '@comp/Img';
 import TOC from '@comp/TOC';
 
 
+:::danger WIP
+Dbux-PDG is still in an early stage of development. It has several issues and will not work on all programs. If you really like what you see, or you want to use this for your own algorithms, please contact us on Discord, so we know which parts to prioritize.
+
+NOTE: The parts that are still missing are not necessarily that much work, but simply have been downgraded in priority. That is why we encourage anyone interested to reach out to us and let us know. It matters.
+:::
+
 ## How to use the PDG? {#how-to}
 
 First, make sure that [Dbux is installed and activated](../dbux-features/01-using-dbux.mdx).
@@ -63,6 +69,8 @@ We illustrate using the PDG on two algorithms (`BubbleSort` and `Dijkstra`) in t
 ## Why do we need a PDG?
 
 We designed the Program Dependency Graph (PDG) to allow the developer stay oriented while seeking answers to questions about data flow and data dependencies between memory addresses, statements and control blocks, with a specific focus on data structures and algorithms.
+
+TODO: more to be said here.
 
 
 ## How does the PDG work?
