WIP: bringing back Webpack

--- a/docs_site/content/_partials/_dbux-code-commands.mdx
+++ b/docs_site/content/_partials/_dbux-code-commands.mdx
@@ -4,7 +4,7 @@
 | dbux.debugFile                                        | Dbux: Debug Current File                            | Run selected file with Dbux, but with Node's `--inspect-brk` enabled. Make sure to enable VSCode's auto attach beforehand.                    |
 | dbux.deleteUserEvents                                 | Dbux Dev: Delete all user events                    | (Feature still in development. Won't work.)                                                                                                   |
 | dbux.diagnostics                                      | Dbux: Diagnostics                                   |                                                                                                                                               |
-| dbux.doActivate                                       | Dbux: Start Dbux                                    |                                                                                                                                               |
+| dbux.doActivate1                                      | Dbux: Start Dbux                                    |                                                                                                                                               |
 | dbux.exportApplicationData                            | Dbux: Export Application Data                       | Export raw recorded Dbux data of a previously executed application to a `json` file.                                                          |
 | dbux.hideDecorations                                  | Dbux: Hide Code Decorations                         | Do not annotate executed code with Dbux code decorations (<span className="color-red">✦↱</span><span className="color-orange">🔥ƒ</span> etc). |
 | dbux.hideGraphView                                    | Dbux: Hide Call Graph                               | Close the Call Graph panel.                                                                                                                   |
@@ -12,6 +12,7 @@
 | dbux.importApplicationData                            | Dbux: Import Application Data                       |                                                                                                                                               |
 | dbux.loadPracticeLogFile                              | Dbux Dev: Load Practice Log                         |                                                                                                                                               |
 | dbux.loadResearchSession                              | Dbux: Load research session                         |                                                                                                                                               |
+| dbux.openExportFolder                                 | Dbux: Open Export Folder                            |                                                                                                                                               |
 | dbux.openPracticeLogFolder                            | Dbux: Open Practice Log Folder                      |                                                                                                                                               |
 | dbux.reloadExerciseList                               | Dbux: Reload Exercise List                          |                                                                                                                                               |
 | dbux.resetPracticeLog                                 | Dbux Dev: Reset Practice Log                        |                                                                                                                                               |
@@ -25,12 +26,14 @@
 | dbux.showGraphView                                    | Dbux: Show Call Graph                               | Open the Call Graph panel.                                                                                                                    |
 | dbux.showHelp                                         | Dbux: Help                                          | Show the Dbux help dialog.                                                                                                                    |
 | dbux.showOutputChannel                                | Dbux: Show output channel                           |                                                                                                                                               |
+| dbux.showPDGOfContext                                 | Dbux: Open PDG for Selected Function                |                                                                                                                                               |
 | dbux.showPathwaysView                                 | Dbux: Show Pathways View                            |                                                                                                                                               |
 | dbux.startPathways                                    | Dbux Pathways: Start                                |                                                                                                                                               |
 | dbux.startRuntimeServer                               | Dbux: Start Dbux Runtime Server                     |                                                                                                                                               |
 | dbux.stopPathways                                     | Dbux Pathways: Stop                                 |                                                                                                                                               |
 | dbux.stopRuntimeServer                                | Dbux: Stop Dbux Runtime Server                      |                                                                                                                                               |
 | dbux.systemCheck                                      | Dbux: Check System Dependencies                     | Dbux (especially Dbux practice) needs some system tools in order to work properly. You can check these dependencies with this command.        |
+| dbux.testPDG                                          | Dbux Dev: Test PDG                                  |                                                                                                                                               |
 | dbux.toggleErrorLog                                   | Dbux: Toggle Error Notifications                    | Suppress/unsuppress all Dbux error notifications.                                                                                             |
 | dbux.toggleNavButton                                  | Dbux: Toggle Editor Navigation Bar Buttons          | Hide/show Dbux buttons in the editor tab bar. Use this if you don't want to see any extra buttons at the top right of your editor tab bar.    |
 | dbux.togglePracticeView                               | Dbux: Toggle Practice View                          | Feature still in development. You can use this to use Dbux on a pre-configured bug in express.                                                |
