--- a/docs_site/content/01-installation.mdx
+++ b/docs_site/content/01-installation.mdx
@@ -13,7 +13,7 @@ import ToolLink from '@src/components/ToolLink';
    * <Img src="screens/start_dbux.png" zoomable={true} width="300px" />
 3. When necessary (e.g. after installation), wait for dependencies to update.
    * <Img src="screens/installing_dependencies.png" zoomable={true} width="300px" />
-4. The Dbux VSCode Extension is now ready [to use](./dbux-features)!
+4. The Dbux VSCode Extension is now ready [to use](./features)!
    * <Img src="screens/dbux-ready.png" zoomable={true} width="150px" />
 
 <!-- :::note
