--- a/docs_site/content/03-dbux-architecture.mdx
+++ b/docs_site/content/03-dbux-architecture.mdx
@@ -36,7 +36,7 @@ They are implemented in four applications and several library packages:
 
 Several library packages are also part of the [Dbux Monorepo](https://github.com/Domiii/dbux):
 
-* &#8203;<CodeLink path="dbux-graph-common" />, <CodeLink path="dbux-graph-client" /> and <CodeLink path="dbux-graph-host" /> are responsible for rendering and letting the user interact with the [Call Graph](./dbux-features/10-call-graph.mdx) webview.
+* &#8203;<CodeLink path="dbux-graph-common" />, <CodeLink path="dbux-graph-client" /> and <CodeLink path="dbux-graph-host" /> are responsible for rendering and letting the user interact with the [Call Graph](./features/10-call-graph.mdx) webview.
 * &#8203;<CodeLink path="dbux-data" /> Receives, pre-processes and manages all data sent by `@dbux/runtime`. It allows us to query and analyze JS runtime data on a higher level.
 * &#8203;<CodeLink path="dbux-projects" /> is used by `dbux-code` as part of [Dbux Practice](./dbux-practice/01-overview.mdx) (but does not depend on `VSCode`). It allows users to clone, install and execute real-world projects, their bugs and practice exercises *with a single click*.
 * &#8203;<CodeLink path="dbux-common" /> Collection of commonly used utilities shared among (more or less) all other modules.
