--- a/docs_site/content/advanced/02-future-work.mdx
+++ b/docs_site/content/advanced/02-future-work.mdx
@@ -16,7 +16,7 @@ Some JS syntax constructs are not supported at all or support is limited:
   * We do not currently connect data flow through es6 deconstruction.
   * In verbose mode, `Dbux` raises some warnings tagged with "`[NYI]`" to notify you of those missing connections.
 
-NOTE: The code should still work fine, but some of Dbux's analysis tools (especially [Data Flow](../dbux-features/50-data-flow.mdx)) will not be able to provide all actual connections.
+NOTE: The code should still work fine, but some of Dbux's analysis tools (especially [Data Flow](../features/50-data-flow.mdx)) will not be able to provide all actual connections.
 
 
 ## Problems with Values
