--- a/docs_site/content/background/02-debugging.mdx
+++ b/docs_site/content/background/02-debugging.mdx
@@ -9,7 +9,7 @@ We argue: this approach to debugging is not very effective, and has not really c
 
 Dbux is an [omniscient debugger](https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=omniscient+debugger), meaning it automatically gathers and visualizes your application's runtime behavior, and makes it interactive. The term "omniscient" (meaning "**all-knowing**") is a quirky exaggeration (it does not know your grandma's birthday). By default, it records the beginning and end of all executed files and functions, all asynchronous events and the entire trace log, meaning (almost) all statements and expressions and their values.
 
-All that data is then available for the developer to inspect and interact with, using a variety of [dynamic analysis tools](./dbux-features/). We decided that the diversity and depth of the tools available in the [Dbux VSCode Extension](./tools-and-configuration/01-dbux-code.mdx) might warrant the title of **IDbE**: Integrated Debugging Environment (not to be confused with [IDE](https://en.wikipedia.org/wiki/Integrated_development_environment)).
+All that data is then available for the developer to inspect and interact with, using a variety of [dynamic analysis tools](./features/). We decided that the diversity and depth of the tools available in the [Dbux VSCode Extension](./tools-and-configuration/01-dbux-code.mdx) might warrant the title of **IDbE**: Integrated Debugging Environment (not to be confused with [IDE](https://en.wikipedia.org/wiki/Integrated_development_environment)).
 
 
 ## On Omniscient Debuggers
