--- a/docs_site/content/dbux-features/25-pdg.mdx
+++ b/docs_site/content/dbux-features/25-pdg.mdx
@@ -19,7 +19,7 @@ NOTE: The parts that are still missing are not necessarily that much work, but s
 
 ## How to use the PDG? {#how-to}
 
-First, make sure that [Dbux is installed and activated](../dbux-features/01-using-dbux.mdx).
+First, make sure that [Dbux is installed and activated](../features/01-using-dbux.mdx).
 
 There are currently two ways of using the PDG. Both can be accessed via [VSCode commands](./tools-and-configuration/01-dbux-code.mdx#commands):
 
