--- a/docs_site/content/features/20-acg.mdx
+++ b/docs_site/content/features/20-acg.mdx
@@ -32,6 +32,9 @@ Open the [call graph](./10-call-graph.mdx). Then press the `sync`/`async` button
 
 ## Examples
 
+[The Dbux intro video](https://youtu.be/N9W6rhHMKbA?t=617) demonstrates the ACG in several examples.
+
+
 ### Example1: sample program {#example1}
 
 This example demonstrates the ACG of a sample program:
